--- a/stop watch/index.html
+++ b/stop watch/index.html
@@ -19,7 +19,7 @@
         </div>
 
     </div>
-    <script src="./script.js"></script>
+    <script src="./script1.js"></script>
 </body>
 
 </html>
