countdown feature update

--- a/count down/index.html
+++ b/count down/index.html
@@ -14,15 +14,15 @@
     <div class="container">
         <div class="container_inputs">
             <div>
-                <input placeholder="00" type="number" id="hours" />
+                <input min="0" max="99" placeholder="00" type="number" id="hours" />
                 <label for="hour">hours</label>
             </div>
             <div>
-                <input placeholder="00" type="number" id="mins" />
+                <input min="0" max="60" placeholder="00" type="number" id="mins" />
                 <label for="hour">Mins</label>
             </div>
             <div>
-                <input placeholder="00" type="number" id="secs" />
+                <input min="0" max="60" placeholder="00" type="number" id="secs" />
                 <label for="hour">seconds</label>
             </div>
 
